--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "babel-preset-react": "^6.24.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "dependencies": {
+    "react-jss": "^10.6.0"
   }
 }
