--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
   },
   "dependencies": {
     "react-jss": "^10.6.0"
+  },
+  "peerDependencies": {
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   }
 }
